# training

test_via_algo/: CMakeLists.txt
test_via_algo/include/kata_1/: create_phone_number.h
test_via_algo/include/kata_2/: is_prime_number.h
test_via_algo/include/kata_3/: digital_root.h
test_via_algo/src/: main.cpp
test_via_algo/src/kata_1/: create_phone_number.cpp
test_via_algo/src/kata_2/: is_prime_number.cpp
test_via_algo/src/kata_3/: digital_root.cpp
test_via_algo/test/kata_1/: create_phone_number.cc
test_via_algo/test/kata_2/: is_prime_number.cc
test_via_algo/test/kata_3/: digital_root.cc
test_via_algo/test/kata_4/: exes_amd_ohs.cc
test_via_algo/test/kata_5/: RGBToHex.cc
